--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -18,7 +18,7 @@
     <p class='card-text'>Price: <%= number_to_currency(item.price) %></p>
     <p class='card-text'>Sold by: <%= link_to item.merchant.name, "/merchants/#{item.merchant_id}" %>
     <p class='card-text'>Inventory: <%= item.inventory %></p>
-    <p class='card-text'><%= item.active ? "Active" : "Inactive" if current_admin? %></p>
+    <p class='card-text'><%= item.active ? "Active" : "Inactive" if current_admin? || current_merchant_user? %></p>
     <% if current_merchant_user? %>
       <% if item.active? %>
         <%= button_to 'Inactivate', "/merchant/items/#{item.id}/change_status", method: :put %>
