--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
           <%= link_to 'Log In', login_path, class: 'nav-item nav-link' unless current_user %>
           <% if current_user %>
             <%= link_to 'Log Out', logout_path, class: 'nav-item nav-link' %>
-            <%= link_to 'Profile', profile_path, class: 'nav-item nav-link' %>
-            <p>Logged in as <%= current_user.name %></p>
+            <%= link_to 'Profile', profile_path, class: 'nav-item nav-link' if current_user.default? %>
+            <%= link_to "Logged in as #{current_user.name}", '#', class: 'nav-item nav-link' %>
           <% if current_merchant_user? %>
             <%= link_to 'Merchant Dashboard', merchant_dashboard_path, class: 'nav-item nav-link' %>
           <% elsif current_admin? %>
@@ -26,7 +26,8 @@
             <%= link_to 'Users', '/admin/users', class: 'nav-item nav-link' %>
           <% end %>
         <% end %>
-        <%= link_to 'Merchants', '/merchants', class: 'nav-item nav-link' %>
+        <%= link_to 'Merchants', '/merchants', class: 'nav-item nav-link' unless current_admin? %>
+        <%= link_to 'Merchants', '/admin/merchants', class: 'nav-item nav-link' if current_admin? %>
         <%= link_to 'Items', '/items', class: 'nav-item nav-link' %>
         <%= link_to "Cart: #{cart.count}", cart_path, class: 'nav-item nav-link' unless current_user && current_admin?%>
        </div>
@@ -35,7 +36,7 @@
     <% flash.each do |type, message| %>
       <p class="alert alert-<%= type %>"><%= message %></p>
     <% end %>
-    <div class='container'
+    <div class='container'>
       <%= yield %>
     </div>
   </body>
