--- a/app/views/merchant/coupons/new.html.erb
+++ b/app/views/merchant/coupons/new.html.erb
@@ -2,4 +2,7 @@
 
 <%= render partial: 'form', locals: {path: '/merchant/coupons',
                                     method: :post,
-                                    submit_text: 'Add Coupon'} %>
+                                    submit_text: 'Add Coupon',
+                                    name_var: nil,
+                                    code_var: nil,
+                                    percent_var: nil } %>
