--- a/app/views/merchant/coupons/index.html.erb
+++ b/app/views/merchant/coupons/index.html.erb
@@ -13,7 +13,7 @@
       <td><%= coupon.name %></td>
       <td><%= coupon.code %></td>
       <td><%= coupon.percent_off %>%</td>
-      <td>Active</td>
+      <td><%= button_to 'Update', "/merchant/coupons/#{coupon.id}/edit", method: :get %></td>
     </tr>
    <% end %>
   </tbody>
