--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -23,5 +23,10 @@
       <p>You must <%= link_to 'register', registration_path %> or <%= link_to 'log in', login_path %> to checkout.</p>
     <% end %>
   </section>
+  <%= form_tag '/cart/validate-coupon', method: :patch do %>
+    <%= label_tag :coupon_code %>
+    <%= text_field_tag :coupon_code %>
+    <%= submit_tag 'Validate Coupon' %>
+  <% end %>
   <%= button_to 'Empty Cart', '/cart', method: :delete %>
 <% end %>
