Add calculations for total discount and discount per item

--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -8,7 +8,9 @@
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaLM_vbg2Rh-mZ-B4t-RSU9AmSfEEq_SN9xPP_qrA2I6Ftq_D9Qw">
       <p>Price: <%= number_to_currency(item.price) %></p>
       <p>Quantity: <%= cart.count_of(item.id) %></p>
-      <p>Subtotal: <%= number_to_currency(cart.subtotal_of(item.id)) %></p>
+      <p>Subtotal: <%= number_to_currency(item.price * cart.count_of(item.id)) %></p>
+      <p>Discounts: (<%= number_to_currency(cart.discount_amount(item)) %>)</p>
+      <p>Final Subtotal: <%= number_to_currency(cart.subtotal_of(item.id)) %></p>
       <p>Sold by: <%= link_to item.merchant.name, "/merchants/#{item.merchant_id}" %>, Inventory: <%= item.inventory %></p>
       <%= button_to 'More of This!', "/cart/more/#{item.id}", method: :patch unless cart.limit_reached?(item.id) %>
       <%= button_to 'Less of This!', "/cart/less/#{item.id}", method: :patch %>
@@ -22,7 +24,9 @@
       <p>You must <%= link_to 'register', registration_path %> or <%= link_to 'log in', login_path %> to checkout.</p>
     <% end %>
   </section>
-  <h3>Total: <%= number_to_currency(cart.grand_total) %></h3>
+
+  <p>Total Discounts: (<%= number_to_currency(cart.total_discount) %>)</p>
+  <h3>Grand Total: <%= number_to_currency(cart.grand_total) %></h3>
   <%= form_tag '/cart/validate-coupon', method: :patch do %>
     <%= label_tag :coupon_code %>
     <%= text_field_tag :coupon_code %>
