Update order show to reflect new stats

--- a/app/views/user/orders/show.html.erb
+++ b/app/views/user/orders/show.html.erb
@@ -3,6 +3,8 @@
 <p>Updated On: <%= @order.updated_at %></p>
 <p>Status: <%= @order.status %></p>
 <p><%= @order.count_of_items %> items</p>
+<p>Subtotal: <%= number_to_currency(@order.subtotal) %>
+<p>Discounts: (<%= number_to_currency(@order.discounts) %>)
 <p>Total: <%= number_to_currency(@order.grand_total) %></p>
 <%= button_to 'Cancel Order', "/profile/orders/#{@order.id}", method: :delete if @order.pending? %>
 
@@ -14,5 +16,7 @@
     <p>Quantity: <%= order_item.quantity %></p>
     <p>Price: <%= number_to_currency(order_item.price) %></p>
     <p>Subtotal: <%= number_to_currency(order_item.subtotal) %></p>
+    <p>Discounts: <%= number_to_currency(order_item.discount) %></p>
+    <p>Total: <%= number_to_currency(order_item.revenue) %></p>
   </section>
 <% end %>
