--- a/app/views/merchant/coupons/edit.html.erb
+++ b/app/views/merchant/coupons/edit.html.erb
@@ -4,4 +4,5 @@
                                     submit_text: 'Update Coupon',
                                     name_var: @coupon.name,
                                     code_var: @coupon.code,
-                                    percent_var: @coupon.percent_off } %>
+                                    percent_var: @coupon.percent_off,
+                                    checked: @coupon.one_use?} %>
