--- a/app/views/merchant/coupons/new.html.erb
+++ b/app/views/merchant/coupons/new.html.erb
@@ -5,4 +5,5 @@
                                     submit_text: 'Add Coupon',
                                     name_var: nil,
                                     code_var: nil,
-                                    percent_var: nil } %>
+                                    percent_var: nil,
+                                    checked: false} %>
