--- a/app/views/merchant/coupons/index.html.erb
+++ b/app/views/merchant/coupons/index.html.erb
@@ -5,6 +5,7 @@
     <th>Name</th>
     <th>Code</th>
     <th>Discount</th>
+    <th>One Use Only?</th>
     <th>Update?</th>
     <th>Delete?</th>
   </thead>
@@ -14,6 +15,7 @@
       <td><%= coupon.name %></td>
       <td><%= coupon.code %></td>
       <td><%= coupon.percent_off %>%</td>
+      <td><%= coupon.one_use?.to_s.upcase %></td>
       <td><%= button_to 'Update', "/merchant/coupons/#{coupon.id}/edit", method: :get %></td>
       <td><%= button_to 'Delete', "/merchant/coupons/#{coupon.id}", method: :delete %></td>
     </tr>
